<resources>
    <string name="app_name">Exercise035</string>
    <string name="Email">Masukkan Email</string>
    <string name="Password">Masukkan Password</string>
    <string name="Submit">SUBMIT</string>
    <string name="BelumDaftar">Belum Terdaftar?</string>
    <string name="Pendaftaran">Pendaftaran</string>
    <string name="Nama">Masukkan Nama Lengkap</string>
    <string name="Alamat">Masukkan Alamat Rumah</string>
    <string name="Email2">Masukkan Email</string>
    <string name="Password2">Masukkan Password</string>
    <string name="Password3">Masukkan Kembali Password</string>
    <string name="JenisKelamin">Jenis Kelamin</string>
    <string name="lakilaki">Laki-laki</string>
    <string name="Perempuan">Perempuan</string>
    <string name="Agama">Agama</string>
    <string name="Islam">Islam</string>
    <string name="Katolik">Katolik</string>
    <string name="Kristen">Kristen</string>
    <string name="Hindu">Hindu</string>
    <string name="Budha">Budha</string>
    <string name="PenganutKepercayaan">Penganut Kepercayaan</string>
    <string name="Batal">BATAL</string>
    <string name="Daftar">DAFTAR</string>
    <string name="DataKontak">Data Kontak</string>
    <string name="Search">Search</string>
    <string name="DetailKontak">Detail Kontak</string>
    <string name="NamaKontak">Nama Kontak</string>
    <string name="tvNamaKontak"> Nama Kontak</string>
    <string name="NomorTelepon">Nomor Telepon</string>
    <string name="tvNomorTelepon">Nomor Telepon</string>
    <string name="LihatData">Lihat Data</string>
    <string name="editData">Edit Data</string>
    <string name="NamaItem">Nama Item</string>

</resources>